# rinha

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.run/: All in endpoints.run.xml  Run rinha.run.xml
src/: main.rs
tests/: endpoints.http  hello-world.http
